2015-01-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/dbtransaction.hxx, include/pqxx/subtransaction.hxx,
 src/connection_base.cxx, src/cursor.cxx, src/dbtransaction.cxx,
 src/subtransaction.cxx:
 - Drop support for 8.x backends; require 9.0 or better.
2015-01-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 README-UPGRADE, config/sample-headers/libpq/, configitems, configure.ac.in,
 include/pqxx/Makefile.am, include/pqxx/compiler-internal.hxx,
 include/pqxx/config.h.in, src/binarystring.cxx, src/connection_base.cxx,
 src/util.cxx, test/test000.cxx, test/test093.cxx,
 test/unit/test_parameterized.cxx, tools/pqxx-fulltest, win32/INSTALL.txt:
 - Drop support for libpq 8.x; require 9.0 or better.
 - The whole config header for libpq features is currently gone!
2015-01-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/gcc-4.4/pqxx/config-internal-compiler.h,
 config/sample-headers/compiler/VisualStudio2010/pqxx/config-internal-compiler.h,
 configitems, configure.ac.in, include/pqxx/config.h.in, src/strconv.cxx:
 - Rename PQXX_HAVE_C_ISINF, similar to PQXX_HAVE_C_ISNAN.
 - Fix check for isinf(), just like the one for isnan().
2015-01-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/gcc-4.4/pqxx/config-internal-compiler.h,
 config/sample-headers/compiler/VisualStudio2010/pqxx/config-internal-compiler.h,
 configitems, configure.ac.in, include/pqxx/config.h.in, src/strconv.cxx:
 - Rename PQXX_HAVE_C_ISNAN; TR1 defines a std::isnan() and we can use either.
 - Fix check for isnan(); it always failed due to a syntax error.
 - Add PQXX_HAVE_ISNAN to configitems; it was missing.
 - Add PQXX_HAVE_ISNAN to sample headers.
2015-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/gcc-4.4/pqxx/config-internal-compiler.h,
 configitems, configure.ac.in, include/pqxx/config.h.in:
 - Remove detection of C99 nan(); no longer needed for workarounds.
2015-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>